remediate third vulnerability

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -10,7 +10,7 @@
         <button type="submit">Buscar</button>
     </form>
     <% if (searchTerm) { %>
-        <h2>Resultados para: <%- searchTerm %></h2>
+        <h2>Resultados para: <%= searchTerm %></h2>
     <% } %>
     <a href="/">Volver</a>
 </body>
